--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,9 +8,9 @@ upstream backend {
 
 server {
     listen 80;
-
+    listen [::]:80;
     location / {
-        proxy_pass http://frontend;
+        proxy_pass http://frontend/add-cards;
     }
 
     location /sockjs-node {
@@ -21,7 +21,8 @@ server {
     }
 
     location /api {
-        rewrite /backend/(.*) /$1 break;
+        rewrite /api/(.*) /$1 break;
         proxy_pass http://backend;
+        proxy_set_header Host $host;
     }
 }
