--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,7 +10,11 @@ server {
     listen 80;
     listen [::]:80;
     location / {
-        proxy_pass http://frontend/add-cards;
+        proxy_pass http://frontend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /sockjs-node {
@@ -20,9 +24,9 @@ server {
         proxy_set_header Connection "Upgrade";
     }
 
-    location /api {
-        rewrite /api/(.*) /$1 break;
+    location /api/ {
         proxy_pass http://backend;
         proxy_set_header Host $host;
+        proxy_set_header X-Real_IP $remote_addr;
     }
 }
